--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project information
-site_name: How Streaming Qorks
+site_name: How Streaming Works
 site_url: https://howstreaming.works
 site_author: howsreaming.works
 site_description: >-
