--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ DRM, encoding, formats, CDNs, and playback technology.
 Get the knowledge you need to navigate the streaming landscape with ease.
 
 # Repository
-repo_name: howstreamingworks/howstreamingworks
+repo_name: howstreamingworks
 repo_url: https://github.com/howstreamingworks/howstreamingworks
 # Copyright
 copyright: Copyright &copy; 2024 - 2025 howstreaming.works
